# mcp-snapshot-server

./: .env.example  .gitignore  API_REFERENCE.md  CLAUDE_DESKTOP.md  DEPLOYMENT.md  MCP_SNAPSHOT_SERVER_FIX_GUIDE.md  PROGRESS.md  README.md  SECURITY.md  SETUP.md  claude_desktop_config.json  mcp_server_bug_report.md  pyproject.toml
.github/workflows/: ci.yml
docs/: All_Prompt_Details.txt  MCP_Server_Project_Specification.md  Quest_Enterprises_Kickoff_Transcript_Summary.md  System_Prompt_Customer_Success_Snapshot.txt  ZOOM_SETUP.md
src/mcp_snapshot_server/: __init__.py  __main__.py  server.py
src/mcp_snapshot_server/agents/: analyzer.py  base.py  orchestrator.py  section_generator.py  validator.py
src/mcp_snapshot_server/models/: __init__.py  analysis.py  base.py  llm.py  sections.py  transcript.py  validation.py  zoom.py
src/mcp_snapshot_server/prompts/: field_definitions.py  section_prompts.py  system_prompts.py
src/mcp_snapshot_server/tools/: nlp_utils.py  transcript_utils.py  zoom_api.py
src/mcp_snapshot_server/utils/: config.py  errors.py  logging_config.py  sampling.py
tests/: conftest.py  test_server.py
tests/fixtures/: quest_enterprises_project_kickoff_transcript.vtt  sample_input.vtt  test_jama.vtt
tests/test_agents/: test_orchestrator.py  test_validator.py
tests/test_tools/: test_transcript_utils.py
tests/test_utils/: test_config.py  test_errors.py
